# rustraytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  scene.json
libgeom/: Cargo.toml
libgeom/src/: lib.rs
libgeom/src/shape/: bound_box.rs  plane.rs  triangle.rs
libgeom/src/shape/mesh/: obj_parser.rs
libs/geom/: Cargo.toml
libs/geom/src/: lib.rs  point.rs  ray.rs  vector.rs
libs/geom/src/shape/: bound_box.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
libs/geom/src/shape/mesh/: bvh.rs  mod.rs  obj_parser.rs
libs/utils/: Cargo.toml
libs/utils/src/: datastructures.rs  lib.rs  props.rs
scenes/: buddha.json  mirror.json
src/: color.rs  lib.rs  main.rs  props.rs  utils.rs
src/color/: mod.rs
src/display/: console.rs  mod.rs  ppm.rs
src/geom/: mod.rs  point.rs  ray.rs  vector.rs
src/geom/shape/: bound_box.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/geom/shape/mesh/: bvh.rs  mod.rs  obj_parser.rs
src/rendering/: config.rs  filters.rs  image.rs  mod.rs  samplers.rs  utils.rs
src/scene/: camera.rs  config.rs  filters.rs  light.rs  material.rs  mod.rs  object.rs  primitive.rs  renderer.rs
