[package]
name = "rustraytracer"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"


[dependencies]
rand = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1"
simple_parallel = "0.3"

[dependencies.geom]
path = "libs/geom"

[dependencies.utils]
path = "libs/geom"

[profile.release]
debug = true
