[package]
name = "rustraytracer"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"


[dependencies]
rand = "*"
regex = "*"
rustc-serialize = "*"
time = "*"
rayon = "*"

[dependencies.geom]
path = "libs/geom"

[dependencies.utils]
path = "libs/utils"

[profile.release]
debug = true
